# autowc

./: .gitignore  Cargo.toml  flake.nix  shell.nix
autowc/: Cargo.toml
autowc-mcp/: Cargo.toml
autowc-mcp/src/: command.rs  lib.rs  main.rs  server.rs  session.rs
autowc/src/: control.rs  host_winit.rs  input.rs  keycodes.rs  main.rs  protocol.rs  screenshot.rs  state.rs  stdin.rs  window.rs  winit.rs
autowc/src/control/: json.rs  mod.rs  plain.rs
autowc/src/handlers/: mod.rs  xdg_shell.rs
autowc/src/host/: mod.rs  winit.rs
autowc/src/input/: host.rs  mod.rs  synthetic.rs
autowc/src/input/keyboard/: keys_sequence.rs  mod.rs
autowc/src/render/: mod.rs
autowc/src/state/: clipboard.rs  mod.rs  output.rs
autowc/src/wayland/: compositor.rs  mod.rs  xdg_shell.rs
src/: control.rs  input.rs  keycodes.rs  main.rs  state.rs  stdin.rs  winit.rs
src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
