[package]
name = "autowc-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
rmcp = { version = "1.7.0", features = ["transport-io", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
