[package]
name = "autowc"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bitflags = "2.2.1"
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2"
png = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wayland-egl = "0.32.9"
wl-clipboard-rs = "0.9.3"

[dependencies.smithay]
version = "0.7.0"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]
